# workshop_docker_jornada_de_dados

./: Dockerfile  README.md  app.py  pyproject.toml
