[tool.poetry]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <vgabriel@mslcorporate.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
